update event trigger

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,9 +2,9 @@ name: .NET CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "dev", "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "dev", "main" ]
 
 jobs:
   build:
